add ViewPagerBackGroudColorChange demo

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':library', ':PullToReFreshDemo'
+include ':app', ':library', ':PullToReFreshDemo', ':ViewPagerBackGroudColorChange'
