add Menu Dialog , from bottom of window

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':library', ':PullToReFreshDemo', ':ViewPagerBackGroudColorChange'
+include ':app', ':library', ':PullToReFreshDemo', ':ViewPagerBackGroudColorChange', ':BottomMenu'
